# quant-trading-system

./: .env.example  .gitignore  main.py  package-lock.json  pytest.ini  requirements-dev.txt  requirements.txt
data/: load_folder.py  polygon_agg_download.py  storage.py
engine/: __init__.py  pyproject.toml
engine/backtest/: __init__.py  __main__.py  backtest.py  runner.py
engine/config/: execution.yaml  load_config.py  risk.yaml
engine/data/: __init__.py  data_engine.py  polygon_agg_download.py  storage.py  update_daily_aggregates.py
engine/data/raw/stocks/: good_quality_stock_tickers_200.txt
engine/execution/: __init__.py  broker_alpaca.py  broker_base.py  broker_paper.py  costs.py  execution_engine.py  order_types.py  risk.py
engine/features/: __init__.py  cross_section.py  definitions.py  feature_engine.py  indicators.py  pipeline.py  rolling.py  transforms.py  types.py
engine/models/: base.py  logistic.py
engine/strategy/: __init__.py  base.py  mean_revert.py  regime_alpha_strategy.py  rules.py
engine/strategy/alpha/: __init__.py  alpha_engine_long_only.py  router_long_only.py  types.py
engine/strategy/alpha/models/: __init__.py  lowvol.py  meanrev.py  momentum.py
engine/strategy/portfolio/: __init__.py  constructor_long_only.py  types.py
engine/strategy/regime/: __init__.py  config.py  market_regime.py  market_regime_adapter.py  market_types.py  stock_regime_config.py  stock_regime_rule_based.py  stock_types.py
features/: build_features.py
models/: prep_train_folds.py  train_fold.py
scripts/: QUICK_SETUP.md  README_SCHEDULER.md  (+3 more)
(+55 files in other folders)
